--- a/FSharp/FAKE/Fake.BuildHelpers/Fake.BuildHelpers.fsproj
+++ b/FSharp/FAKE/Fake.BuildHelpers/Fake.BuildHelpers.fsproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>6f31b3a2-3b95-4d05-a5aa-9d27b5be014a</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>Fake.BuildHelpers</RootNamespace>
     <AssemblyName>Fake.BuildHelpers</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
@@ -47,8 +47,9 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssemblyPackaging.fs" />
     <None Include="AssemblyPackaging.fsx" />
-    <Compile Include="Program.fs" />
+    <None Include="TryAssemblyProcessing.fsx" />
     <None Include="App.config" />
   </ItemGroup>
   <PropertyGroup>
